# fits_handler

./: .gitignore  BESAutoPtr.cc  BESAutoPtr.h  ChangeLog  FitsHandlerApp.cc  FitsHandlerApp.h  FitsModule.cc  FitsModule.h  FitsRequestHandler.cc  FitsRequestHandler.h  FitsResponseNames.h  INSTALL  Makefile.am  Makefile.in  NEWS  OPeNDAPFitsModule.cc  OPeNDAPFitsModule.h  README  bes-fits-data.sh.in  bes.conf  bes_fits_handler.cc  config_fits.h.in  configure  configure.ac  configure.in  dap_fits_handler.cc  depend.sh  fits.conf.in  fits_handler.cc  fits_handler.spec  fits_module.cc  fits_read_attributes.cc  fits_read_attributes.h  fits_read_descriptors.cc  fits_read_descriptors.h  fits_version.h  opendap.ini
OSX_Resources/: Info.plist  InstallationCheck  ReadMe.txt  Welcome.html  update_mac_package_contents.pl
bes-testsuite/: Makefile.am  bes.conf.in  bes.conf.modules.in  fits_handlerTest.at
bes-testsuite/besstandalone.fits/: cpb.das.exp  cpb.dds.exp  cpb.ddx.exp
bes-testsuite/fits/: cpb.das.bescmd  cpb.das.bescmd.baseline  cpb.data.bescmd  cpb.data.bescmd.baseline  cpb.dds.bescmd  cpb.ddx.bescmd  cpb.ddx.bescmd.baseline
conf/: bes.m4  cdf.m4  cdf_header.m4
testsuite/: Makefile.am  bes.conf.in
testsuite/besstandalone.fits/: cpb.ascii.exp  cpb.data.exp
testsuite/fits/: cpb.ascii.bescmd  cpb.ascii.bescmd.baseline  cpb.das.bescmd  cpb.dds.bescmd  cpb.dds.bescmd.baseline  cpb.ddx.bescmd
